@startuml

title __NETWORK_MESSAGES's Class Diagram__\n

  namespace no.ntnu.idi.apollo69framework {
    namespace network_messages {
      class no.ntnu.idi.apollo69framework.network_messages.DeviceInfo {
          - deviceId : String
          + DeviceInfo()
          + DeviceInfo()
          + getDeviceId()
          + setDeviceId()
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69framework {
    namespace network_messages {
      class no.ntnu.idi.apollo69framework.network_messages.PlayerDead {
          + PlayerDead()
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69framework {
    namespace network_messages {
      class no.ntnu.idi.apollo69framework.network_messages.PlayerInQueue {
          - position : int
          - queueSize : int
          + PlayerInQueue()
          + PlayerInQueue()
          + getPosition()
          + getQueueSize()
          + setPosition()
          + setQueueSize()
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69framework {
    namespace network_messages {
      class no.ntnu.idi.apollo69framework.network_messages.PlayerInput {
          - boosting : boolean
          - playerId : String
          - posX : float
          - posY : float
          - rotationDegrees : float
          - shooting : boolean
          + PlayerInput()
          + PlayerInput()
          + getPlayerId()
          + getPosX()
          + getPosY()
          + getRotationDegrees()
          + getType()
          + isBoosting()
          + isShooting()
          + setBoosting()
          + setPlayerId()
          + setPosX()
          + setPosY()
          + setRotationDegrees()
          + setShooting()
          + setType()
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69framework {
    namespace network_messages {
      enum PlayerInputType {
        BOOST
        MOVE
        ROTATE
        SHOOT
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69framework {
    namespace network_messages {
      class no.ntnu.idi.apollo69framework.network_messages.PlayerMatchmade {
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69framework {
    namespace network_messages {
      class no.ntnu.idi.apollo69framework.network_messages.PlayerSpawn {
          - name : String
          - playerId : String
          + PlayerSpawn()
          + PlayerSpawn()
          + getName()
          + getPlayerId()
          + getPositionDto()
          + setName()
          + setPlayerId()
          + setPositionDto()
          + toString()
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69framework {
    namespace network_messages {
      class no.ntnu.idi.apollo69framework.network_messages.ServerMessage {
          - message : String
          - recipientDeviceId : String
          + ServerMessage()
          + ServerMessage()
          + ServerMessage()
          + getMessage()
          + getRecipientDeviceId()
          + isForDevice()
          + setMessage()
          + setRecipientDeviceId()
      }
    }
  }
  

  namespace no.ntnu.idi.apollo69framework {
    namespace network_messages {
      class no.ntnu.idi.apollo69framework.network_messages.UpdateMessage {
          - asteroidDtoList : List<AsteroidDto>
          - explosionDtoList : List<ExplosionDto>
          - pickupDtoList : List<PickupDto>
          - playerDtoList : List<PlayerDto>
          - powerupDtoList : List<PowerupDto>
          - shotDtoList : List<ShotDto>
          + UpdateMessage()
          + getAsteroidDtoList()
          + getExplosionDtoList()
          + getPickupDtoList()
          + getPlayerDtoList()
          + getPowerupDtoList()
          + getShotDtoList()
          + setAsteroidDtoList()
          + setExplosionDtoList()
          + setPickupDtoList()
          + setPlayerDtoList()
          + setPowerupDtoList()
          + setShotDtoList()
      }
    }
  }
  

  no.ntnu.idi.apollo69framework.network_messages.PlayerInput o-- no.ntnu.idi.apollo69framework.network_messages.PlayerInputType : type
  no.ntnu.idi.apollo69framework.network_messages.PlayerSpawn o-- no.ntnu.idi.apollo69framework.network_messages.data_transfer_objects.PositionDto : positionDto


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
